# Shadow-Ops

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
project-3/: requirements.txt  secret.json
project-3/scripts/tests/: test_push_data.py
project-4/: data_cleaning.ipynb  eda_timeseries.ipynb  text_analysis.ipynb
project-5/: README.md  main.py
project-6/: .env.example  pyproject.toml
project-6/project_6/: ORM. SQLAlchemy.ipynb  main.py  query_db.py
project-6/tests/: test_main.py
project_5/: .env.example  README.md  main.py
