[tool.poetry]
name = "gspread-package-dev"
version = "0.1.0"
description = ""
authors = ["Gbotemi Bolarinwa <gbotemibolarinwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
gspread = "^5.12.0"
pandas = "^1.4.9"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
