[tool.poetry]
name = "project-6"
version = "0.1.0"
description = ""
authors = ["GbotemiB <gbotemibolarinwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
pymysql = "^1.1.0"
pandas = "^2.1.4"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
